--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=weatherApp
+openweather.api.key=<api.key>
+openweather.api.url=https://api.openweathermap.org/data/2.5/weather
