--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=weatherApp
+weather.api.url=https://api.openweathermap.org/data/2.5/weather
+weather.api.key=035b527923829f1c0154994451cfd0bc
