--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ weather.api.url=https://api.openweathermap.org/data/2.5/weather
 weather.api.key=<key>
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+spring.cache.type=redis
