--- a/weatherApp/src/main/resources/application.properties
+++ b/weatherApp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=weatherApp
-openweather.api.key=<api.key>
+openweather.api.key=035b527923829f1c0154994451cfd0bc
 openweather.api.url=https://api.openweathermap.org/data/2.5/weather
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.cache.redis.time-to-live=864000000
+spring.cache.redis.time-to-live=1
