--- a/dvd-rental-app/src/main/resources/application.properties
+++ b/dvd-rental-app/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.application.name=dvdrental
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.cache.type=redis
+
+spring.datasource.url=jdbc:mysql://172.18.0.1:3306/sakila
+spring.datasource.username=root
+spring.datasource.password=Kritter12!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Optional JPA configs
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+elasticsearch.host=localhost
+elasticsearch.port=9200
+spring.elasticsearch.uris=http://localhost:9200
