--- a/weather-app/src/main/resources/application.properties
+++ b/weather-app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=weatherApp
 weather.api.url=https://api.openweathermap.org/data/2.5/weather
-weather.api.key=<key>
+weather.api.key=035b527923829f1c0154994451cfd0bc
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.cache.type=redis
