Migrated to gradle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.cache.redis.time-to-live=1
 spring.datasource.url=jdbc:mysql://localhost:3306/sakila
 spring.datasource.username=root
 spring.datasource.password=Kritter12!
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db/migration
+spring.flyway.mysql.compatibility-mode=8.0
+spring.flyway.clean-on-validation-error=true
